--- a/src/app/shared/ui/forms/select-team/select-team.component.html
+++ b/src/app/shared/ui/forms/select-team/select-team.component.html
@@ -1,17 +1,20 @@
-<tui-select
-  [formControl]="control"
-  style="padding-top: 10px;"
->
-  TEAM
-  <!--  {{ 'enter ' | uppercase }} {{ 'player position' | uppercase }}-->
-  <tui-data-list *tuiDataList>
-    @for (team of teamsList; track team.id) {
-      <button
-        tuiOption
-        [value]="team"
-      >
-        {{ team.title | titlecase }}
-      </button>
-    }
-  </tui-data-list>
-</tui-select>
+@if (control) {
+  <tui-select
+    [formControl]="control"
+    [tuiDropdownLimitWidth]="'min'"
+    style="padding-top: 10px;"
+  >
+    TEAM
+    <!--  {{ 'enter ' | uppercase }} {{ 'player position' | uppercase }}-->
+    <tui-data-list *tuiDataList>
+      @for (team of teamsList; track team.id) {
+        <button
+          tuiOption
+          [value]="team"
+        >
+          {{ team.title | titlecase }}
+        </button>
+      }
+    </tui-data-list>
+  </tui-select>
+}
