--- a/src/app/shared/ui/select/select-player-position/select-player-position.component.html
+++ b/src/app/shared/ui/select/select-player-position/select-player-position.component.html
@@ -1,28 +1,31 @@
-<tui-select
-  [formControl]="control"
-  style="padding-top: 10px;"
->
-  POS.
-  <!--  {{ 'enter ' | uppercase }} {{ 'player position' | uppercase }}-->
-  <tui-data-list *tuiDataList>
-    @for (position of positionList; track position.id) {
-      <button
-        tuiOption
-        [value]="position"
-      >
-        {{ position.title }}
-      </button>
-    }
-    <app-add-button-icon
-      [action]="'add'"
-      [item]="'Position'"
-      [buttonSize]="'s'"
-      [dialogId]="'addPositionDialog'+index"
-    ></app-add-button-icon>
-  </tui-data-list>
-</tui-select>
-<app-add-edit-position
-  [action]="'add'"
-  [dialogId]="'addPositionDialog'+index"
-  [sport_Id]="sportId"
-></app-add-edit-position>
+@if (control) {
+  <tui-select
+    [formControl]="control"
+    [tuiDropdownLimitWidth]="'min'"
+    style="padding-top: 10px;"
+  >
+    POS.
+    <!--  {{ 'enter ' | uppercase }} {{ 'player position' | uppercase }}-->
+    <tui-data-list *tuiDataList>
+      @for (position of positionList; track position.id) {
+        <button
+          tuiOption
+          [value]="position"
+        >
+          {{ position.title }}
+        </button>
+      }
+      <app-add-button-icon
+        [action]="'add'"
+        [item]="'Position'"
+        [buttonSize]="'s'"
+        [dialogId]="'addPositionDialog'+index"
+      ></app-add-button-icon>
+    </tui-data-list>
+  </tui-select>
+  <app-add-edit-position
+    [action]="'add'"
+    [dialogId]="'addPositionDialog'+index"
+    [sport_Id]="sportId"
+  ></app-add-edit-position>
+}
