--- a/src/styles.less
+++ b/src/styles.less
@@ -171,6 +171,17 @@ aside > * {
   align-items: flex-start;
 }
 
+.one_row_container {
+  display: flex;
+  flex-direction: row;
+  padding: 15px;
+  gap: 10px;
+  min-width: 100%;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+
 .list-of-items-with-data * {
   margin-bottom: 15px;
   // gap between objects in aside
