--- a/src/app/components/player-team-tournament/add-edit-player-to-team-tournament-table/add-edit-player-to-team-tournament-table.component.html
+++ b/src/app/components/player-team-tournament/add-edit-player-to-team-tournament-table/add-edit-player-to-team-tournament-table.component.html
@@ -7,17 +7,6 @@
   >
 
     <div class="table">
-      <!--      <div class="table-header-body">-->
-      <!--        <div class="table-header">Full Name</div>-->
-      <!--        @if (teamId) {-->
-      <!--          <div class="table-header">Number</div>-->
-      <!--        } @else {-->
-      <!--          <div class="table-header">Team</div>-->
-      <!--        }-->
-      <!--        <div class="table-header">Position</div>-->
-      <!--        <div class="table-header">Actions</div>-->
-      <!--      </div>-->
-
       @if (players && players.length) {
         <div formArrayName="players" class="table-body">
 
@@ -25,11 +14,13 @@
             *ngFor="let playerFormGroup of playersArray.controls; let i = index"
             class="table-row"
             [formGroupName]="i"
-            (click)="toggle(playerFormGroup.get('playerInTeamId' + i)!.value.toString())"
           >
 
 
-            <div class="table-cell first">
+            <div
+              class="table-cell first"
+              (click)="toggle(playerFormGroup.get('playerInTeamId' + i)!.value)"
+            >
               @if (getFormDataByIndexAndKey(playerFormGroup, i, 'playerId')) {
                 @if (getFormDataByIndexAndKey(playerFormGroup, i, 'fullName'); as name) {
                   {{ name | titlecase }}
@@ -93,39 +84,62 @@
               }
             </div>
             @if (playerFormGroup.get('playerInTeamId' + i)!.value; as id) {
-              <tui-expand [expanded]="isExpanded(id)">
+              <tui-expand [expanded]="isExpanded(id)" class="expand">
                 <ng-template tuiExpandContent>
                   <div class="table-cell actions">
+                    <div class="player-short-profile">
+                      @if (playerFormGroup.get('photoUrl' + i)!.value; as photoUrl) {
+                        <tui-avatar
+                          size="xl"
+                          text="uploaded logo"
+                          class="player-photo-short-profile"
+                          [rounded]="false"
+                          [avatarUrl]="url + photoUrl"
+                          (error)="onImgError($event)"
+                        ></tui-avatar>
 
-                    @if (deleteOrUpdate == 'deleteFromTeam') {
-                      <app-actions-buttons
-                        [id]="id"
-                        [index]="i"
-                        [deleteOrUpdate]="'deleteFromTeam'"
-                        [item]="getFormDataByIndexAndKey(playerFormGroup, i, 'fullName') | uppercase"
-                        [isEnabled]="isRowEnabled(i)"
-                        [isDataChanged]="isDataChanged(i)"
-                        (onEdit)="enableRowToEdit($event.index)"
-                        (onSubmit)="onSubmit($event.action, $event.index, $event.id)"
-                        (onCancel)="onCancelButtonClick()"
-                        (onDeleteUpdate)="onSubmit($event.action, $event.index, $event.id)"
-                        (onDeleteDialog)="onDeleteButtonClick('deleteDialogPlayer'+$event.id!)"
-                      ></app-actions-buttons>
-                    } @else {
-                      <app-actions-buttons
-                        [id]="id"
-                        [index]="i"
-                        [deleteOrUpdate]="'delete'"
-                        [item]="getFormDataByIndexAndKey(playerFormGroup, i, 'fullName') | uppercase"
-                        [isEnabled]="isRowEnabled(i)"
-                        [isDataChanged]="isDataChanged(i)"
-                        (onEdit)="enableRowToEdit($event.index)"
-                        (onDelete)="onDelete($event.id!)"
-                        (onSubmit)="onSubmit($event.action, $event.index, $event.id)"
-                        (onCancel)="onCancelButtonClick()"
-                        (onDeleteDialog)="onDeleteButtonClick('deleteDialogPlayer'+$event.id!)"
-                      ></app-actions-buttons>
-                    }
+                        <!--                        <img-->
+                          <!--                          src="{{url}}{{photoUrl}}"-->
+                          <!--                          height="100px"-->
+                          <!--                          alt="Photo"-->
+                          <!--                          (error)="onImgError($event)"-->
+                          <!--                          class="player-photo-short-profile"-->
+                          <!--                        >-->
+                      }
+                      @if (playerFormGroup.get('dob' + i)!.value; as dob) {
+                        <span>{{ dob | date }}</span>
+                        <span>Age: {{ calculateAge(dob) }} years</span>
+                      }
+                      @if (deleteOrUpdate == 'deleteFromTeam') {
+                        <app-actions-buttons
+                          [id]="id"
+                          [index]="i"
+                          [deleteOrUpdate]="'deleteFromTeam'"
+                          [item]="getFormDataByIndexAndKey(playerFormGroup, i, 'fullName') | uppercase"
+                          [isEnabled]="isRowEnabled(i)"
+                          [isDataChanged]="isDataChanged(i)"
+                          (onEdit)="enableRowToEdit($event.index)"
+                          (onSubmit)="onSubmit($event.action, $event.index, $event.id)"
+                          (onCancel)="onCancelButtonClick()"
+                          (onDeleteUpdate)="onSubmit($event.action, $event.index, $event.id)"
+                          (onDeleteDialog)="onDeleteButtonClick('deleteDialogPlayer'+$event.id!)"
+                        ></app-actions-buttons>
+                      } @else {
+                        <app-actions-buttons
+                          [id]="id"
+                          [index]="i"
+                          [deleteOrUpdate]="'delete'"
+                          [item]="getFormDataByIndexAndKey(playerFormGroup, i, 'fullName') | uppercase"
+                          [isEnabled]="isRowEnabled(i)"
+                          [isDataChanged]="isDataChanged(i)"
+                          (onEdit)="enableRowToEdit($event.index)"
+                          (onDelete)="onDelete($event.id!)"
+                          (onSubmit)="onSubmit($event.action, $event.index, $event.id)"
+                          (onCancel)="onCancelButtonClick()"
+                          (onDeleteDialog)="onDeleteButtonClick('deleteDialogPlayer'+$event.id!)"
+                        ></app-actions-buttons>
+                      }
+                    </div>
                   </div>
                 </ng-template>
               </tui-expand>
@@ -152,169 +166,6 @@
           ></app-add-button-on-final-tr>
         </div>
       }
-
     </div>
-
   </form>
 }
-<!--<form-->
-<!--  tuiTextfieldSize="m"-->
-<!--  [formGroup]="playerForm"-->
-<!--  [tuiTextfieldLabelOutside]="true"-->
-<!--&gt;-->
-<!--  <table-->
-<!--    tuiTable-->
-<!--    [size]="'s'"-->
-<!--    class="table-players"-->
-<!--    style="width: 100%;padding: 20px;"-->
-<!--  >-->
-<!--    <thead>-->
-<!--    <tr tuiThGroup>-->
-<!--      <th tuiTh>Full Name</th>-->
-<!--      @if (teamId) {-->
-<!--        <th tuiTh>Number</th>-->
-<!--      } @else {-->
-<!--        <th-->
-<!--          tuiTh-->
-<!--        >Team-->
-<!--        </th>-->
-<!--      }-->
-<!--      <th tuiTh>Position</th>-->
-<!--      <th tuiTh>Actions</th>-->
-<!--    </tr>-->
-<!--    </thead>-->
-
-<!--    <tbody formArrayName="players">-->
-<!--      @if (players) {-->
-<!--        @for (playerFormGroup of playersArray.controls; let i = $index; track i) {-->
-<!--          <tr [formGroupName]="i">-->
-<!--            <td tuiTd>-->
-<!--              @if (getFormDataByIndexAndKey(playerFormGroup, i, 'playerId')) {-->
-<!--                @if (getFormDataByIndexAndKey(playerFormGroup, i, 'fullName'); as name) {-->
-<!--                  {{ name | uppercase }}-->
-<!--                }-->
-<!--              } @else {-->
-<!--                @if (availablePlayersInSport.length > 0) {-->
-<!--                  <app-select-player-to-team-tournament-->
-<!--                    [playerList]="availablePlayersInSport"-->
-<!--                    [tournamentId]="tournamentId"-->
-<!--                    [control]="getFormControl(this.playerForm, i, 'playerInSport', 'players')"-->
-<!--                  ></app-select-player-to-team-tournament>-->
-<!--                } @else {-->
-<!--                  <app-select-player-to-team-tournament-->
-<!--                    [playerListFromTournament]="availablePlayersInTournament"-->
-<!--                    [tournamentId]="tournamentId"-->
-<!--                    [control]="getFormControl(this.playerForm, i, 'playerInSport', 'players')"-->
-<!--                    (playerSelect)="onPlayerSelect($event, i)"-->
-<!--                  ></app-select-player-to-team-tournament>-->
-<!--                }-->
-
-<!--              }-->
-<!--            </td>-->
-
-<!--            <td tuiTd>-->
-<!--              @if (teamId) {-->
-<!--                @if (isRowEnabled(i)) {-->
-<!--                  <app-select-player-number-->
-<!--                    [control]="getFormControl(this.playerForm, i, 'number', 'players')"-->
-<!--                  ></app-select-player-number>-->
-<!--                } @else {-->
-<!--                  {{ getFormDataByIndexAndKey(playerFormGroup, i, 'number') }}-->
-<!--                }-->
-
-<!--              } @else {-->
-<!--                @if (isRowEnabled(i)) {-->
-<!--                  <app-select-team-->
-<!--                    [control]="getFormControl(this.playerForm, i, 'team', 'players')"-->
-<!--                    [teamsList]="teamsInTournament"-->
-<!--                  ></app-select-team>-->
-<!--                } @else {-->
-<!--                  {{ getFormDataByIndexAndKey(playerFormGroup, i, 'team')?.title | uppercase }}-->
-<!--                }-->
-
-<!--              }-->
-<!--            </td>-->
-<!--            <td tuiTd>-->
-<!--              @if (sportId) {-->
-<!--                @if (positions) {-->
-<!--                  @if (isRowEnabled(i)) {-->
-<!--                    <app-select-player-position-->
-<!--                      [positionList]="positions"-->
-<!--                      [index]="i"-->
-<!--                      [sportId]="sportId"-->
-<!--                      [control]="getFormControl(this.playerForm, i, 'position', 'players')"-->
-<!--                    ></app-select-player-position>-->
-<!--                  } @else {-->
-<!--                    {{ getFormDataByIndexAndKey(playerFormGroup, i, 'position')?.title | uppercase }}-->
-<!--                  }-->
-<!--                }-->
-<!--              }-->
-<!--            </td>-->
-<!--            <td tuiTd>-->
-<!--              @if (playerFormGroup.get('playerInTeamId' + i)!.value; as id) {-->
-
-<!--                @if (deleteOrUpdate == 'deleteFromTeam') {-->
-<!--                  <app-actions-buttons-->
-<!--                    [id]="id"-->
-<!--                    [index]="i"-->
-<!--                    [deleteOrUpdate]="'deleteFromTeam'"-->
-<!--                    [item]="getFormDataByIndexAndKey(playerFormGroup, i, 'fullName') | uppercase"-->
-<!--                    [isEnabled]="isRowEnabled(i)"-->
-<!--                    [isDataChanged]="isDataChanged(i)"-->
-<!--                    (onEdit)="enableRowToEdit($event.index)"-->
-<!--                    (onSubmit)="onSubmit($event.action, $event.index, $event.id)"-->
-<!--                    (onCancel)="onCancelButtonClick()"-->
-<!--                    (onDeleteUpdate)="onSubmit($event.action, $event.index, $event.id)"-->
-<!--                    (onDeleteDialog)="onDeleteButtonClick('deleteDialogPlayer'+$event.id!)"-->
-<!--                  ></app-actions-buttons>-->
-<!--                } @else {-->
-
-<!--                  <app-actions-buttons-->
-<!--                    [id]="id"-->
-<!--                    [index]="i"-->
-<!--                    [deleteOrUpdate]="'delete'"-->
-<!--                    [item]="getFormDataByIndexAndKey(playerFormGroup, i, 'fullName') | uppercase"-->
-<!--                    [isEnabled]="isRowEnabled(i)"-->
-<!--                    [isDataChanged]="isDataChanged(i)"-->
-<!--                    (onEdit)="enableRowToEdit($event.index)"-->
-<!--                    (onDelete)="onDelete($event.id!)"-->
-<!--                    (onSubmit)="onSubmit($event.action, $event.index, $event.id)"-->
-<!--                    (onCancel)="onCancelButtonClick()"-->
-<!--                    (onDeleteDialog)="onDeleteButtonClick('deleteDialogPlayer'+$event.id!)"-->
-<!--                  ></app-actions-buttons>-->
-
-<!--                }-->
-<!--              } @else {-->
-<!--                <app-actions-buttons-->
-<!--                  [index]="i"-->
-<!--                  (onSubmit)="onSubmit($event.action, $event.index, $event.id)"-->
-<!--                  (onCancel)="onCancelButtonClick()"-->
-<!--                ></app-actions-buttons>-->
-<!--              }-->
-<!--            </td>-->
-<!--          </tr>-->
-<!--        }-->
-<!--        @if (!players.length || players[players.length - 1].playerInTeamTournament.id !== null) {-->
-<!--          <tr>-->
-<!--            <td class="table-cell" tuiTd [attr.colspan]="4">-->
-<!--              <app-add-button-on-final-tr-->
-<!--                [span]="4"-->
-<!--                (onAdd)="addNewPlayer()"-->
-<!--              ></app-add-button-on-final-tr>-->
-<!--            </td>-->
-<!--          </tr>-->
-<!--        }-->
-<!--      } @else {-->
-<!--        <tr>-->
-<!--          <td class="table-cell" tuiTd [attr.colspan]="4">-->
-<!--            <app-add-button-on-final-tr-->
-<!--              [span]="4"-->
-<!--              (onAdd)="addNewPlayer()"-->
-<!--            ></app-add-button-on-final-tr>-->
-<!--          </td>-->
-<!--        </tr>-->
-<!--      }-->
-<!--    </tbody>-->
-<!--  </table>-->
-<!--</form>-->
-
