table with players refactoring

--- a/src/app/components/player-team-tournament/add-edit-player-to-team-tournament-table/add-edit-player-to-team-tournament-table.component.html
+++ b/src/app/components/player-team-tournament/add-edit-player-to-team-tournament-table/add-edit-player-to-team-tournament-table.component.html
@@ -94,7 +94,7 @@
                           text="uploaded logo"
                           class="player-photo-short-profile"
                           [rounded]="false"
-                          [avatarUrl]="url + photoUrl"
+                          [avatarUrl]="backendUrl + photoUrl"
                           (error)="onImgError($event)"
                         ></tui-avatar>
 
