--- a/src/app/components/player-team-tournament/add-edit-player-to-team-tournament-table/add-edit-player-to-team-tournament-table.component.html
+++ b/src/app/components/player-team-tournament/add-edit-player-to-team-tournament-table/add-edit-player-to-team-tournament-table.component.html
@@ -1,10 +1,10 @@
-@if (players && players.length && playerForm && playersArray && playersArray.length) {
-  <form
-    tuiTextfieldSize="m"
-    [formGroup]="playerForm"
-    [tuiTextfieldLabelOutside]="true"
-    style="padding: 10px"
-  >
+<form
+  tuiTextfieldSize="m"
+  [formGroup]="playerForm"
+  [tuiTextfieldLabelOutside]="true"
+  style="padding: 10px"
+>
+  @if (players && players.length && playerForm && playersArray && playersArray.length) {
 
     <div class="table">
       @if (players && players.length) {
@@ -155,6 +155,7 @@
         @if (!players.length || players[players.length - 1].playerInTeamTournament.id !== null) {
           <div class="table-row final">
             <app-add-button-on-final-tr
+              [action]="'add player'"
               (onAdd)="addNewPlayer()"
             ></app-add-button-on-final-tr>
           </div>
@@ -167,5 +168,12 @@
         </div>
       }
     </div>
-  </form>
-}
+  } @else {
+    No Players
+    <div class="table-row final">
+      <app-add-button-on-final-tr
+        (onAdd)="addNewPlayer()"
+      ></app-add-button-on-final-tr>
+    </div>
+  }
+</form>
