pagination to team added

--- a/src/app/shared/ui/list/list-of-matches/list-of-matches.component.html
+++ b/src/app/shared/ui/list/list-of-matches/list-of-matches.component.html
@@ -3,7 +3,7 @@
     <div class="item-with-data-island">
       <a
         rel="noreferrer"
-        size="l"
+        size="m"
         target="_self"
         tuiIsland
         textAlign="center"
