--- a/src/app/shared/ui/pagination/base-pagination/base-pagination.component.html
+++ b/src/app/shared/ui/pagination/base-pagination/base-pagination.component.html
@@ -1,5 +1,10 @@
 <div class="pagination"
-     style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
+     style="display: flex;
+     justify-content: space-between;
+     align-items: center;
+     flex-wrap: wrap;
+     padding: 16px"
+>
   <div style="flex: 1;"></div>
   <div style="flex: 2; text-align: center; padding: 10px">
     <tui-pagination
