--- a/src/app/components/tournament/item-tournament/item-tournament.component.html
+++ b/src/app/components/tournament/item-tournament/item-tournament.component.html
@@ -35,87 +35,145 @@
       <tui-loader [inheritColor]="true"></tui-loader>
     </h3>
   }
+
+  <div class="one_row_container">
+    @if (this.tournament$ | async; as tournament) {
+      <app-edit-button
+        [action]="'edit'"
+        [item]="'Tournament'"
+        [dialogId]="'editTournamentDialog'"
+      ></app-edit-button>
+
+      <app-tournament-add-edit-form
+        [action]="'edit'"
+        [dialogId]="'editTournamentDialog'"
+        [new_tournament]="tournament"
+        [allSponsors]="allSponsors$ | async"
+        [allSponsorLines]="allSponsorLines$ | async"
+      ></app-tournament-add-edit-form>
+
+      @if (teamsInTournament$ | async; as teams) {
+
+        <app-create-button-show-dialog
+          [action]="'add'"
+          [item]="'Match'"
+          [dialogId]="'addDialog'"
+        ></app-create-button-show-dialog>
+        <app-add-edit-match
+          [action]="'add'"
+          [dialogId]="'addDialog'"
+          [tournamentId]="tournament.id!"
+          [teams]="teams"
+        ></app-add-edit-match>
+
+        @if (allAvailablePlayersToAddInTournament$ | async; as players) {
+          @if (sport$ | async; as sport) {
+            @if (tournament$ | async; as tournament) {
+              <app-edit-button
+                [action]="'add'"
+                [item]="'Player'"
+                [dialogId]="'addPlayerDialog'"
+              ></app-edit-button>
+
+              <app-add-edit-player-to-team-tournament
+                [action]="'add'"
+                [dialogId]="'addPlayerDialog'"
+                [availablePlayers]="players"
+                [sportPositions]="allSportPositions$| async"
+                [sport_Id]="sport.id!"
+                [tournamentId]="tournament.id!"
+                [tournamentTeams]="teams"
+              ></app-add-edit-player-to-team-tournament>
+            }
+          }
+        }
+      }
+      <app-delete-button
+        [item]="buttonTitle"
+        [dialogId]="'deleteDialog'"
+      ></app-delete-button>
+      <app-delete-dialog
+        [item]="buttonTitle"
+        (delete)="onDelete()"
+        [dialogId]="'deleteDialog'"
+      ></app-delete-dialog>
+    } </div>
 </div>
 
 <div class="tournament content__body">
   <div class="one_col_container">
-    @if (this.tournament$ | async; as tournament) {
-      <div class="tournament content__body__title__flex">
-        <app-body-list-title
-          titleMany='matches'
-        ></app-body-list-title>
+    <app-body-list-title
+      titleMany='matches'
+    ></app-body-list-title>
+    <!--    @if (this.tournament$ | async; as tournament) {-->
+    <!--      <div class="tournament content__body__title__flex">-->
+    <!--        <app-body-list-title-->
+    <!--          titleMany='matches'-->
+    <!--        ></app-body-list-title>-->
 
-        <app-edit-button
-          [action]="'edit'"
-          [item]="'Tournament'"
-          [dialogId]="'editTournamentDialog'"
-        ></app-edit-button>
+    <!--        <app-edit-button-->
+    <!--          [action]="'edit'"-->
+    <!--          [item]="'Tournament'"-->
+    <!--          [dialogId]="'editTournamentDialog'"-->
+    <!--        ></app-edit-button>-->
 
-        <app-tournament-add-edit-form
-          [action]="'edit'"
-          [dialogId]="'editTournamentDialog'"
-          [new_tournament]="tournament"
-          [allSponsors]="allSponsors$ | async"
-          [allSponsorLines]="allSponsorLines$ | async"
-        ></app-tournament-add-edit-form>
+    <!--        <app-tournament-add-edit-form-->
+    <!--          [action]="'edit'"-->
+    <!--          [dialogId]="'editTournamentDialog'"-->
+    <!--          [new_tournament]="tournament"-->
+    <!--          [allSponsors]="allSponsors$ | async"-->
+    <!--          [allSponsorLines]="allSponsorLines$ | async"-->
+    <!--        ></app-tournament-add-edit-form>-->
 
-        @if (tournament.id) {
-          @if (teamsInTournament$ | async; as teams) {
+    <!--        @if (teamsInTournament$ | async; as teams) {-->
 
-            <app-create-button-show-dialog
-              [action]="'add'"
-              [item]="'Match'"
-              [dialogId]="'addDialog'"
-            ></app-create-button-show-dialog>
-            <app-add-edit-match
-              [action]="'add'"
-              [dialogId]="'addDialog'"
-              [tournamentId]="tournament.id"
-              [teams]="teams"
-            ></app-add-edit-match>
+    <!--          <app-create-button-show-dialog-->
+    <!--            [action]="'add'"-->
+    <!--            [item]="'Match'"-->
+    <!--            [dialogId]="'addDialog'"-->
+    <!--          ></app-create-button-show-dialog>-->
+    <!--          <app-add-edit-match-->
+    <!--            [action]="'add'"-->
+    <!--            [dialogId]="'addDialog'"-->
+    <!--            [tournamentId]="tournament.id!"-->
+    <!--            [teams]="teams"-->
+    <!--          ></app-add-edit-match>-->
 
-            @if (allAvailablePlayersToAddInTournament$ | async; as players) {
-              @if (sport$ | async; as sport) {
-                @if (tournament$ | async; as tournament) {
-                  <app-edit-button
-                    [action]="'add'"
-                    [item]="'Player'"
-                    [dialogId]="'addPlayerDialog'"
-                  ></app-edit-button>
+    <!--          @if (allAvailablePlayersToAddInTournament$ | async; as players) {-->
+    <!--            @if (sport$ | async; as sport) {-->
+    <!--              @if (tournament$ | async; as tournament) {-->
+    <!--                <app-edit-button-->
+    <!--                  [action]="'add'"-->
+    <!--                  [item]="'Player'"-->
+    <!--                  [dialogId]="'addPlayerDialog'"-->
+    <!--                ></app-edit-button>-->
 
-                  <app-add-edit-player-to-team-tournament
-                    [action]="'add'"
-                    [dialogId]="'addPlayerDialog'"
-                    [availablePlayers]="players"
-                    [sportPositions]="allSportPositions$| async"
-                    [sport_Id]="sport.id!"
-                    [tournamentId]="tournament.id!"
-                    [tournamentTeams]="teams"
-                  ></app-add-edit-player-to-team-tournament>
-                }
-              }
-            }
-          }
+    <!--                <app-add-edit-player-to-team-tournament-->
+    <!--                  [action]="'add'"-->
+    <!--                  [dialogId]="'addPlayerDialog'"-->
+    <!--                  [availablePlayers]="players"-->
+    <!--                  [sportPositions]="allSportPositions$| async"-->
+    <!--                  [sport_Id]="sport.id!"-->
+    <!--                  [tournamentId]="tournament.id!"-->
+    <!--                  [tournamentTeams]="teams"-->
+    <!--                ></app-add-edit-player-to-team-tournament>-->
+    <!--              }-->
+    <!--            }-->
+    <!--          }-->
+    <!--        }-->
+    <!--        <app-delete-button-->
+    <!--          [item]="buttonTitle"-->
+    <!--          [dialogId]="'deleteDialog'"-->
+    <!--        ></app-delete-button>-->
+    <!--        <app-delete-dialog-->
+    <!--          [item]="buttonTitle"-->
+    <!--          (delete)="onDelete()"-->
+    <!--          [dialogId]="'deleteDialog'"-->
+    <!--        ></app-delete-dialog>-->
 
-        } @else {
-          <tui-loader></tui-loader>
-        }
-        <app-delete-button
-          [item]="buttonTitle"
-          [dialogId]="'deleteDialog'"
-        ></app-delete-button>
-        <app-delete-dialog
-          [item]="buttonTitle"
-          (delete)="onDelete()"
-          [dialogId]="'deleteDialog'"
-        ></app-delete-dialog>
+    <!--      </div>-->
 
-      </div>
-
-    } @else {
-      <tui-loader [inheritColor]="true"></tui-loader>
-    }
-
+    <!--    } -->
     <div class="tournament with__aside">
       <div class="one_col_container">
         @if (matchesInTournament$ | async; as items) {
@@ -136,30 +194,38 @@
               [placeholder]="'Team title'"
               (search)="onSearch($event)"
             ></app-base-search-form>
-
+          </div>
+          <div class="one_col_container">
             @if (totalMatchCombinedSearchPages$ | async; as totalPages) {
               @if (currentPage$ | async; as currentPage) {
                 <app-base-pagination
                   [currentPage]="currentPage"
                   [totalPages]="totalPages"
+                  [itemsPerPage]="6"
                   (pageChange)="setCurrentPage($event)"
                   (pageSizeChange)="changePageSize($event)"
                 ></app-base-pagination>
               }
             }
-
           </div>
           <div class="list-of-items-with-data" style="padding: 20px">
             <app-list-of-matches
               [data$]="paginatedMatchCombinedSearchResults$"
             ></app-list-of-matches>
           </div>
-          <div>
+
+          <div class="one_col_container">
+            <app-body-list-title
+              titleMany='players'
+            ></app-body-list-title>
+
             @if (sport$ | async; as sport) {
               @if (tournament$ | async; as tournament) {
-                @if (allPlayerInTournamentFullData$ | async; as players) {
+                @if (paginatedTablePlayerInTeamTournament$ | async; as players) {
+                  <!--                @if (allPlayerInTournamentFullData$ | async; as players) {-->
                   @if (allSportPlayersWithPerson$ | async; as playersInSports) {
                     @if (allAvailablePlayersToAddInTournament$ | async; as availablePlayers) {
+
                       <app-add-edit-player-to-team-tournament-table
                         [deleteOrUpdate]="'delete'"
                         [sportId]="sport.id!"
@@ -170,6 +236,7 @@
                         [availablePlayersInSport]="availablePlayers"
                         [positions]="allSportPositions$ | async"
                       ></app-add-edit-player-to-team-tournament-table>
+
                     }
                   }
                 }
@@ -177,6 +244,19 @@
             } @else {
               <tui-loader></tui-loader>
             }
+
+            @if (totalPlayersInTeamTournament$ | async; as totalPages) {
+              @if (currentPlayersInTournamentPage$ | async; as currentPage) {
+                <app-base-pagination
+                  [currentPage]="currentPage"
+                  [totalPages]="totalPages"
+                  [itemsPerPage]="10"
+                  (pageChange)="setPlayerInTournamentCurrentPage($event)"
+                  (pageSizeChange)="changePlayerInTournamentPageSize($event)"
+                ></app-base-pagination>
+              }
+            }
+
 
           </div>
         } @else {
